feat(User): add endpoint to patch user recruitment status and candidate level by admin
